--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* tree.c (maybe_dummy_object): Replace // with /* */
+
 2002-08-09  Mark Mitchell  <mark@codesourcery.com>
 
 	* call.c (standard_conversion): Use build_ptrmem_type.
