--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* gcc.dg/bitfld-4.c: Add blank options.
+
 2002-08-09  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/template/crash1.C: New test.
@@ -12,7 +16,7 @@
 	
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
-	* g++.dg/abi/bitfield4.c: New test.
+	* g++.dg/abi/bitfield4.C: New test.
 	* gcc.dg/bitfld-4.c: New test.
 
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
