--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Sat Aug 10 19:59:43 CEST 2002  Jan Hubicka  <jh@suse.cz>
+			       Graham Stott
+
+	* cfg.c (redirect_edge_succ_nodup): Avoid overflows due to roundoff
+	errors.
+
 2002-08-10  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* emit-rtl.c (emit_jump_insn_before, emit_call_insn_before,
