--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,27 @@
+2002-08-01  Mark Wielaard  <mark@klomp.org>
+
+	Reenable patch since shared library troubles on powerpc are solved:
+	* gnu/java/security/provider/Gnu.java: Reference all implementation
+	classes by using Class.getName().
+	* gnu/java/security/der/DEREncodingException.java,
+	gnu/java/security/provider/DERReader.java,
+	gnu/java/security/provider/DERWriter.java,
+	gnu/java/security/provider/DSAKeyPairGenerator.java,
+	gnu/java/security/provider/DSAParameterGenerator.java,
+	gnu/java/security/provider/DSAParameters.java,
+	gnu/java/security/provider/DSASignature.java,
+	gnu/java/security/provider/GnuDSAPrivateKey.java,
+	gnu/java/security/provider/GnuDSAPublicKey.java,
+	gnu/java/security/provider/MD5.java,
+	gnu/java/security/util/Prime.java: New classes
+	* Makefile.am (ordinary_java_source_files): Add above files.
+	* Makefile.in: Regenerate.
+	* gnu/java/security/provider/DefaultPolicy.java
+	(getPermissions): Don't maintain static class variable of Permissions.
+	* gnu/java/security/provider/SHA.java 
+	(engineUpdate): algorithm change.
+	(engineDigest): algorithm change.
+
 2002-08-09  Mark Wielaard  <mark@klomp.org>
 
 	* java/awt/image/MemoryImageSource.java: Change constructor to take
