--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Sun Aug 11 14:43:17 CEST 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (classify_argument): Fix computing of field's offsets.
+
 2002-08-11  Andreas Jaeger  <aj@suse.de>
 
 	PR target/7531:
