--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2002-08-11  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-common.h (enum c_language_kind): Emphasize that clk_c is 0.
+	* c-opts.c (parse_option): Rename find_opt.
+	(set_std_c99): New function.
+	(COMMAND_LINE_OPTIONS): Handle -remap and -o.  Remove OPT_std_bad.
+	(missing_arg): Remove OPT_std_bad.  Handle -o.
+	(c_common_decode_option): Handle input and output file names,
+	-o and -remap.	Clean up -std= handling.
+	* cppinit.c (COMMAND_LINE_OPTIONS): Remove OPT_o and OPT_remap.
+	(cpp_handle_option): Similarly.  Don't handle filenames.
+
 Sun Aug 11 14:43:17 CEST 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.c (classify_argument): Fix computing of field's offsets.
