* expr.c (store_expr): In condition for checking if value is 	generated in TARGET, move call to expr_size last.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56217 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-12  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* expr.c (store_expr): In condition for checking if value is
+	generated in TARGET, move call to expr_size last.
+
 2002-08-11  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-common.c (c_common_init): Call preprocess_file instead.
