* config.gcc (mips*-*-netbsd*): Include ${tm_file}.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56222 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2002-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* config.gcc (mips*-*-netbsd*): Include ${tm_file}.
+
+2002-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
 	* i370.h (TARGET_CPU_CPP_BUILTINS): Remove spurious trailing
 	backslash in comment preceeding macro definition.
 	* i370/linux.h (TARGET_OS_CPP_BUILTINS): Likewise.
