--- a/gcc/treelang/ChangeLog
+++ b/gcc/treelang/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-13  Neil Booth  <neil@daikokuya.co.uk>
+
+	* treelang.c: Remove cpp_post_options.
+
 2002-08-08  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* treelang/Make-lang.in (treelang.mostlyclean): Remove coverage files.
