--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-13  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-opts.c (c_common_init_options): Check option array is
+	sorted if checking enabled.
+
 2002-08-13  Gabriel Dos Reis  <gdr@nerim.net>
 
 	* c-pretty-print.c: #include "c-tree.h".
