--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-13  Denis Chertykov  <denisc@overta.ru>
+
+	* config/ip2k/ip2k.c (commands_in_file): Variable removed.
+	(function_epilogue): Don't calculate function size.
+	(ip2k_set_compare): Don't use lookup_const_double.
+	(asm_file_start): Initialization of commands_in_file removed.
+	(asm_file_end): Output of commands_in_file removed.
+	
+	* config/ip2k/ip2k.c (CPP_PREDEFINES): Remove definition of
+	__INT_MAX__.
+
 2002-08-13  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-opts.c (c_common_init_options): Check option array is
