--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 13 14:49:20 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gcse.c (adjust_libcall_notes): New function.
+	(do_local_cprop): Use it.  Add fourth parameter.  Changed caller.
+
 2002-08-13  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* libgcc2.c (L_bb): Remove unneeded #includes.
