--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-13  Denis Chertykov  <denisc@overta.ru>
+
+	* config/avr/avr.md: Call CC_STATUS_INIT in all peepnoles
+        which can change CC0.
+
 Tue Aug 13 14:49:20 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcse.c (adjust_libcall_notes): New function.
