--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-13  Mark Mitchell  <mark@codesourcery.com>
+
+	* g++.dg/template/inherit3: New test.
+
 2002-08-10  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* gcc.dg/bitfld-4.c: Add blank options.
